applications/test-application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-application
  template:
    metadata:
      labels:
        app: test-application
    spec:
      containers:
      - name: test-application
        image: matcham89/app:latest
        ports:
        - containerPort: 5000
      - name: counter
        image: busybox:1.28
        args: [/bin/sh, -c,
                'i=0; while true; do echo "$i: $(date)"; i=$((i+1)); sleep 1; done']
