applications/test-application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-application-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: testapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: base-application
            port:
              number: 443
  tls:
  - hosts:
    - testapp.local
    secretName: test-application-tls
